--- a/settings.html
+++ b/settings.html
@@ -5,29 +5,28 @@
             <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
         </div>
         <div class="inline-drawer-content">
-            <div class="format-fixer-block">
-                <p>Format text with proper emphasis and quotes. Use the format button in the message input area or the /format command.</p>
-            </div>
-
-            <div class="format-fixer-block">
-                <h4>Test Cases</h4>
-                <select id="format_fixer_test_case" class="text_pole">
+            <div class="format_fixer_block">
+                <label for="format_fixer_test_case">Test Case:</label>
+                <select id="format_fixer_test_case">
                     <option value="basic">Basic Quote and Narrative</option>
                     <option value="nested">Nested Emphasis</option>
                     <option value="complex">Complex Mixed Formatting</option>
                 </select>
-                <textarea id="format_fixer_test_input" class="text_pole" rows="3" readonly></textarea>
-                <div class="format-fixer_block flex-container">
-                    <input id="format_fixer_test" class="menu_button" type="button" value="Run Test" />
-                </div>
             </div>
 
-            <div class="format-fixer-block">
-                <h4>Test Result</h4>
-                <textarea id="format_fixer_test_output" class="text_pole" rows="3" readonly></textarea>
+            <div class="format_fixer_block">
+                <label for="format_fixer_test_input">Input Text:</label>
+                <textarea id="format_fixer_test_input" class="text_pole textarea_compact" rows="3"></textarea>
             </div>
 
-            <hr class="sysHR" />
+            <div class="format_fixer_block">
+                <label for="format_fixer_test_output">Test Results:</label>
+                <textarea id="format_fixer_test_output" class="text_pole textarea_compact" rows="3" readonly></textarea>
+            </div>
+
+            <div class="format_fixer_block">
+                <input id="format_fixer_test" class="menu_button" type="button" value="Run Test" />
+            </div>
         </div>
     </div>
 </div>
